removed left attribute from ul.contact li h3 and replaced with right attribute to fix spacing of email

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1801,7 +1801,7 @@ input, select, textarea {
 
 			ul.contact li h3 {
 				position: absolute;
-				left: 0;
+				right: 150px;
 				top: 1.3em;
 				font-size: 1.1em;
 			}
